--- a/public/success.html
+++ b/public/success.html
@@ -10,7 +10,7 @@
 <body>
   <h1>🎉 Thank you!</h1>
   <p>Your payment was successful.</p>
-  <a href="/index.html">Return to Home</a>
+  <a href="shop.html">Return to Home</a>
     <script>
     // Clear cart from localStorage
     localStorage.removeItem('cart');
