Fixed landing page and home button

--- a/public/about.html
+++ b/public/about.html
@@ -21,7 +21,7 @@
     <nav id="navbar">
 
   <!-- 1. Logo on the left -->
-  <a href="index.html" id="logo-link">
+  <a href="index.html?from=home" id="logo-link">
     <img src="Pictures/ako.png" alt="AKO by Lee Logo" id="navbar-logo">
   </a>
 
@@ -148,7 +148,7 @@
 </div>
 
 <div class="timeline-item animate-on-scroll">
-  <span class="timeline-date">JANUARY 27, 2024</span>
+  <span class="timeline-date">JAN 27, 2024</span>
   <div class="timeline-content">
     <h3>First Major Event; RSG Jrs</h3>
     <p>Lee started dreaming of a brand that blends community, dance, and crafted drinks into one shared experience.</p>
@@ -156,7 +156,7 @@
 </div>
 
 <div class="timeline-item animate-on-scroll">
-  <span class="timeline-date">FEBRUARY 2, 2024</span>
+  <span class="timeline-date">FEB 2, 2024</span>
   <div class="timeline-content">
     <h3>LMNL Pop Up Store</h3>
     <p>A weekly spot in which we served tea to our dance community. We took over a space to call our own and build a community for people to lounge and relax. Our first home. </p>
@@ -167,12 +167,12 @@
   <span class="timeline-date">MARCH 25, 2024</span>
   <div class="timeline-content">
     <h3>Private Dinner AKO x OTA </h3>
-    <p>A curated menu to a private party. In collaboration with Thomas Ota, we create a curated menu that was Japanese inspired using tea as vital ingredient </p>
+    <p>A curated menu to a private party. In collaboration with Thomas Ota, we create a curated menu that was Japanese inspired using tea as a vital ingredient </p>
   </div>
 </div>
 
 <div class="timeline-item animate-on-scroll">
-  <span class="timeline-date">SEPTEMBER 3, 2024</span>
+  <span class="timeline-date">SEPT 3, 2024</span>
   <div class="timeline-content">
     <h3>AKO's First Merch Release</h3>
     <p>A limited drop off our collection of garments that are inspired by tea and tea culture.</p>
@@ -180,7 +180,7 @@
 </div>
 
 <div class="timeline-item animate-on-scroll">
-  <span class="timeline-date">SEPTEMBER 21, 2024</span>
+  <span class="timeline-date">SEPT 21, 2024</span>
   <div class="timeline-content">
     <h3>Mateo Market</h3>
     <p>Lee started dreaming of a brand that blends community, dance, and crafted drinks into one shared experience.</p>
@@ -188,7 +188,7 @@
 </div>
 
 <div class="timeline-item animate-on-scroll">
-  <span class="timeline-date">DECEMBER 1, 2024</span>
+  <span class="timeline-date">DEC 1, 2024</span>
   <div class="timeline-content">
     <h3>AKO Tea Party</h3>
     <p>Lee started dreaming of a brand that blends community, dance, and crafted drinks into one shared experience.</p>
@@ -196,7 +196,7 @@
 </div>
 
 <div class="timeline-item animate-on-scroll">
-  <span class="timeline-date">AUGUST 24, 2025</span>
+  <span class="timeline-date">AUG 24, 2025</span>
   <div class="timeline-content">
     <h3>AKO After Hours</h3>
     <p>Lee started dreaming of a brand that blends community, dance, and crafted drinks into one shared experience.</p>
@@ -213,7 +213,7 @@
   <div class="footer-top">
     <a href="index.html" class="footer-logo">AKO BY LEE</a>
     <ul class="footer-nav">
-      <li><a href="index.html">Home</a></li>
+      <li><a href="index.html?from=home">Home</a></li>
       <li><a href="shop.html">Shop</a></li>
       <li><a href="menu.html">Menu</a></li>
       <li><a href="reservation.html">Reservation</a></li>
