--- a/public/cancel.html
+++ b/public/cancel.html
@@ -10,6 +10,6 @@
 <body>
   <h1>Payment Cancelled</h1>
   <p>You can continue shopping or try again.</p>
-  <a href="/index.html">Return to Home</a>
+  <a href="/index.html?from=home">Return to Home</a>
 </body>
 </html>
