--- a/public/reservation.html
+++ b/public/reservation.html
@@ -21,7 +21,7 @@
     <nav id="navbar">
 
   <!-- 1. Logo on the left -->
-  <a href="index.html" id="logo-link">
+  <a href="index.html?from=home" id="logo-link">
     <img src="Pictures/ako.png" alt="AKO by Lee Logo" id="navbar-logo">
   </a>
 
@@ -80,7 +80,7 @@
 <footer>
   <!-- Top row: logo, links, icons -->
   <div class="footer-top">
-    <a href="index.html" class="footer-logo">AKO BY LEE</a>
+    <a href="index.html?from=home" class="footer-logo">AKO BY LEE</a>
     <ul class="footer-nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="shop.html">Shop</a></li>
