--- a/public/contact.html
+++ b/public/contact.html
@@ -15,7 +15,7 @@
 <body>
   <!-- ── NAVBAR ── -->
   <nav id="navbar">
-    <a href="index.html" id="logo-link">
+    <a href="index.html?from=home" id="logo-link">
       <img src="Pictures/ako.png" alt="AKO by Lee Logo" id="navbar-logo">
     </a>
     <ul id="nav-links">
@@ -78,7 +78,7 @@
   <!-- ── FOOTER ── -->
   <footer>
     <div class="footer-top">
-      <a href="index.html" class="footer-logo">AKO BY LEE</a>
+      <a href="index.html?from=home" class="footer-logo">AKO BY LEE</a>
       <ul class="footer-nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="shop.html">Shop</a></li>
