Made index.html mobile compatibile

--- a/public/about.html
+++ b/public/about.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
 
   <!-- Web-fonts (optional) -->
    <link
@@ -25,6 +26,10 @@
     <img src="Pictures/ako.png" alt="AKO by Lee Logo" id="navbar-logo">
   </a>
 
+<button id="nav-toggle" aria-expanded="false" aria-controls="nav-links" aria-label="Toggle navigation">
+  <span class="hamburger"></span>
+</button>
+
   <!-- 2. Links centered via auto margins -->
   <ul id="nav-links">
     <li><a href="shop.html">Shop</a></li>
@@ -44,6 +49,7 @@
 
   </ul>
 </nav>
+
 
 <!-- CART SIDEBAR -->
 <aside id="cart-sidebar" aria-hidden="true">
