--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,10 @@
     <img src="Pictures/ako.png" alt="AKO by Lee Logo" id="navbar-logo">
   </a>
 
+<button id="nav-toggle" aria-expanded="false" aria-controls="nav-links" aria-label="Toggle navigation">
+  <span class="hamburger"></span>
+</button>
+
   <!-- 2. Links centered via auto margins -->
   <ul id="nav-links">
     <li><a href="shop.html">Shop</a></li>
@@ -57,6 +61,7 @@
 
   </ul>
 </nav>
+
 
 <!-- CART SIDEBAR -->
 <aside id="cart-sidebar" aria-hidden="true">
@@ -208,5 +213,6 @@
   <script src="script.js"></script>
   <script src="slideshow.js"></script>
   <script src="landing.js"></script>
+
 </body>
 </html>
