--- a/public/menu.html
+++ b/public/menu.html
@@ -26,6 +26,10 @@
     <img src="Pictures/ako.png" alt="AKO by Lee Logo" id="navbar-logo">
   </a>
 
+<button id="nav-toggle" aria-expanded="false" aria-controls="nav-links" aria-label="Toggle navigation">
+  <span class="hamburger"></span>
+</button>
+
   <!-- 2. Links centered via auto margins -->
   <ul id="nav-links">
     <li><a href="shop.html">Shop</a></li>
@@ -33,7 +37,7 @@
     <li><a href="menu.html">Menu</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="gallery.html">Gallery</a></li>
-    <li><a href="reservation.html">Reservation</a></a></li>
+    <li><a href="reservation.html">Reservation</a></li>
       <!-- icon links -->
 
 <li class="social-icon">
@@ -45,6 +49,7 @@
 
   </ul>
 </nav>
+
 
 <!-- CART SIDEBAR -->
 <aside id="cart-sidebar" aria-hidden="true">
