--- a/public/reservation.html
+++ b/public/reservation.html
@@ -25,6 +25,10 @@
     <img src="Pictures/ako.png" alt="AKO by Lee Logo" id="navbar-logo">
   </a>
 
+<button id="nav-toggle" aria-expanded="false" aria-controls="nav-links" aria-label="Toggle navigation">
+  <span class="hamburger"></span>
+</button>
+
   <!-- 2. Links centered via auto margins -->
   <ul id="nav-links">
     <li><a href="shop.html">Shop</a></li>
@@ -44,6 +48,7 @@
 
   </ul>
 </nav>
+
 
 <!-- CART SIDEBAR -->
 <aside id="cart-sidebar" aria-hidden="true">
