--- a/public/menu.html
+++ b/public/menu.html
@@ -122,7 +122,7 @@
   <div class="menu-intro-wrapper">
     <div class="intro-left">
       <h4 class="menu-label">DRINKS</h4>
-      <h2 class="menu-headline">INTRO CARD</h2>
+      <h2 class="menu-headline">MENU</h2>
     </div>
     <div class="intro-right"  id="current">
       <h4 class="intro-heading">WELCOME</h4>
@@ -222,7 +222,7 @@
     <div class="menu-card" data-name="AKO’s Hojicha Latte" data-description="A roasted matcha from Shirakawa, Uji. It’s chocolatey, nutty, and woody version to our beloved matcha lattes" data-image="Pictures/menu/fall.wint/ahl.JPG">
       <img src="Pictures/menu/fall.wint/ahl.JPG">
       <h3>AKO’s Hojicha Latte</h3>
-      <p>Derived from the “Campfires and Marshmallow” drink we made in our winter menu, it's a lapsang souchong base with a wuyi oolong creamtop, garnished with toffee crumble. This version is an enhanced version, with the change of an oolong foam, transforming the drink from a heavy, smokey, sweet drink to a calming sitting by the fireplace</p>
+      <p>A roasted matcha from Shirakawa, Uji. It’s chocolatey, nutty, and woody version to our beloved matcha lattes</p>
     </div>
 
     <div class="menu-card" data-name="Campfires and Marshmallows" data-description="This is a smoked black tea base with a wuyi oolong infused cream top with a toffee crumble. It reminds of a nostalgic feeling of an open fire and pine wood with marshmallows being roasted over a fire" data-image="Pictures/menu/fall.wint/cfmm.JPG">
