--- a/public/reservation.html
+++ b/public/reservation.html
@@ -72,14 +72,13 @@
     <p>We can’t wait to serve you. Fill out the form below to make a reservation.</p>
 
       <!-- Calendly inline widget begin -->
-   <div class="calendly-inline-widget" data-url="https://calendly.com/napppy-lee/ako-x-mmi-ikibana-1?hide_event_type_details=1&hide_gdpr_banner=1" style="min-width:320px;height:700px;"></div>
+<div class="calendly-inline-widget"
+     data-url="https://calendly.com/napppy-lee/ako-x-mmi-ikibana-1?hide_event_type_details=1&hide_gdpr_banner=1"></div>
+
     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
     <!-- Calendly inline widget end -->
   </div>
 </section>
-
-
-
 
 <!-- ── FOOTER ─────────────────────────────────────────────────────── -->
 <footer>
