--- a/public/menu.html
+++ b/public/menu.html
@@ -168,6 +168,38 @@
     </div>
   </div>
 
+    <!-- IKEBANA NIGHT MENU -->
+  <div class="subsection-header">
+    <h2>Seasonal Spring/Summer Menu 2025</h2>
+    <hr />
+  </div>
+
+  <div class="menu-grid">
+
+    <div class="menu-card" data-name="Kisses" data-description="Strawberry Matcha" data-image="Pictures/menu/spring.sum/k.JPG">
+      <img src="Pictures/menu/spring.sum/k.JPG">
+      <h3>Kisses</h3>
+      <p>Strawberry Matcha</p>
+    </div>
+
+  </div>
+
+    <!-- ELOREA MENU -->
+  <div class="subsection-header">
+    <h2>Seasonal Spring/Summer Menu 2025</h2>
+    <hr />
+  </div>
+
+  <div class="menu-grid">
+
+    <div class="menu-card" data-name="Kisses" data-description="Strawberry Matcha" data-image="Pictures/menu/spring.sum/k.JPG">
+      <img src="Pictures/menu/spring.sum/k.JPG">
+      <h3>Kisses</h3>
+      <p>Strawberry Matcha</p>
+    </div>
+
+  </div>
+
   <!-- GOING NOWHERE MENU 2025 -->
     <div class="subsection-header">
     <h2>Going Nowhere Menu 2025</h2>
