--- a/public/menu.html
+++ b/public/menu.html
@@ -141,6 +141,11 @@
     <hr />
   </div>
 
+    <!-- NEW: subsection description -->
+    <p class="subsection-desc">
+    Bright, strawberry-forward drinks and refreshing matcha pairings crafted for warm weather.
+  </p>
+
   <div class="menu-grid">
 
     <div class="menu-card" data-name="Rooibus" data-description="An non-caffeinated African tea that has refreshing, nutty, and earthy tones. With notes of citrus, sage, and honey" data-image="Pictures/menu/current/r.JPG">
@@ -168,7 +173,40 @@
     </div>
   </div>
 
-    <!-- IKEBANA NIGHT MENU -->
+    <!-- IKEBANA ALC NIGHT MENU -->
+  <div class="subsection-header">
+    <h2>IKEBANA ALC NIGHT MENU 2025</h2>
+    <hr />
+  </div>
+
+    <!-- NEW: subsection description -->
+    <p class="subsection-desc">
+    Bright, strawberry-forward drinks and refreshing matcha pairings crafted for warm weather.
+  </p>
+
+  <div class="menu-grid">
+
+    <div class="menu-card" data-name="Chuhai" data-description="An adaptation of an oolong hai.  A Oolong infused barley Shochu and club soda." data-image="Pictures/menu/spring.sum/k.JPG">
+      <img src="Pictures/menu/spring.sum/k.JPG">
+      <h3>Chuhai</h3>
+      <p>An adaptation of an oolong hai.  A Oolong infused barley Shochu and club soda.</p>
+    </div>
+
+        <div class="menu-card" data-name="Matcha" data-description="AKO’s version of a matcha martini with a bit of chocolate. It uses matcha, licor 43, haku vodka, cream, and egg whites. It’s a decadent and rich matcha cocktail." data-image="Pictures/menu/spring.sum/k.JPG">
+      <img src="Pictures/menu/spring.sum/k.JPG">
+      <h3>Matcha</h3>
+      <p>AKO’s version of a matcha martini with a bit of chocolate. It uses matcha, licor 43, haku vodka, cream, and egg whites. It’s a decadent and rich matcha cocktail.</p>
+    </div>
+
+        <div class="menu-card" data-name="Jasmine" data-description="Playing off a classic nostalgic milk tea, this is a clarified cocktail that has the silky feeling of a milk tea with a nice jasmine green milk tea aroma. It uses jasmine milk tea, roku gin, lychee, and fresh lemon juice. " data-image="Pictures/menu/spring.sum/k.JPG">
+      <img src="Pictures/menu/spring.sum/k.JPG">
+      <h3>Jasmine</h3>
+      <p>Playing off a classic nostalgic milk tea, this is a clarified cocktail that has the silky feeling of a milk tea with a nice jasmine green milk tea aroma. It uses jasmine milk tea, roku gin, lychee, and fresh lemon juice. </p>
+    </div>
+
+  </div>
+
+      <!-- IKEBANA NON ALC NIGHT MENU -->
   <div class="subsection-header">
     <h2>Seasonal Spring/Summer Menu 2025</h2>
     <hr />
@@ -190,6 +228,11 @@
     <hr />
   </div>
 
+  <!-- NEW: subsection description -->
+    <p class="subsection-desc">
+    Bright, strawberry-forward drinks and refreshing matcha pairings crafted for warm weather.
+  </p>
+
   <div class="menu-grid">
 
     <div class="menu-card" data-name="Kisses" data-description="Strawberry Matcha" data-image="Pictures/menu/spring.sum/k.JPG">
@@ -205,6 +248,11 @@
     <h2>Going Nowhere Menu 2025</h2>
     <hr />
   </div>
+
+    <!-- NEW: subsection description -->
+    <p class="subsection-desc">
+    Bright, strawberry-forward drinks and refreshing matcha pairings crafted for warm weather.
+  </p>
 
   <div class="menu-grid">
 
@@ -233,6 +281,11 @@
     <hr />
   </div>
 
+    <!-- NEW: subsection description -->
+    <p class="subsection-desc">
+    Bright, strawberry-forward drinks and refreshing matcha pairings crafted for warm weather.
+  </p>
+
   <div class="menu-grid">
 
     <div class="menu-card" data-name="Kisses" data-description="Strawberry Matcha" data-image="Pictures/menu/spring.sum/k.JPG">
@@ -248,6 +301,11 @@
     <h2>Seasonal Fall/Winter Menu 2024</h2>
     <hr />
   </div>
+
+    <!-- NEW: subsection description -->
+    <p class="subsection-desc">
+    Bright, strawberry-forward drinks and refreshing matcha pairings crafted for warm weather.
+  </p>
 
   <div class="menu-grid">
 
