Added new menu items

--- a/public/menu.html
+++ b/public/menu.html
@@ -181,25 +181,25 @@
 
     <!-- NEW: subsection description -->
     <p class="subsection-desc">
-    Bright, strawberry-forward drinks and refreshing matcha pairings crafted for warm weather.
+    Our first iterations of tea inspired cocktails. A menu that takes our first step in the realm of alcoholic beverages. Mixing fun flavors of tea cafe items and adding a new layer of depth to them. 
   </p>
 
   <div class="menu-grid">
 
-    <div class="menu-card" data-name="Chuhai" data-description="An adaptation of an oolong hai.  A Oolong infused barley Shochu and club soda." data-image="Pictures/menu/spring.sum/k.JPG">
-      <img src="Pictures/menu/spring.sum/k.JPG">
+    <div class="menu-card" data-name="Chuhai" data-description="An adaptation of an oolong hai.  A Oolong infused barley Shochu and club soda." data-image="Pictures/menu/ikebana/CHUHAI.JPG">
+      <img src="Pictures/menu/ikebana/CHUHAI.JPG">
       <h3>Chuhai</h3>
       <p>An adaptation of an oolong hai.  A Oolong infused barley Shochu and club soda.</p>
     </div>
 
-        <div class="menu-card" data-name="Matcha" data-description="AKO’s version of a matcha martini with a bit of chocolate. It uses matcha, licor 43, haku vodka, cream, and egg whites. It’s a decadent and rich matcha cocktail." data-image="Pictures/menu/spring.sum/k.JPG">
-      <img src="Pictures/menu/spring.sum/k.JPG">
+        <div class="menu-card" data-name="Matcha" data-description="AKO’s version of a matcha martini with a bit of chocolate. It uses matcha, licor 43, haku vodka, cream, and egg whites. It’s a decadent and rich matcha cocktail." data-image="Pictures/menu/ikebana/MATCHA.JPG">
+      <img src="Pictures/menu/ikebana/MATCHA.JPG">
       <h3>Matcha</h3>
       <p>AKO’s version of a matcha martini with a bit of chocolate. It uses matcha, licor 43, haku vodka, cream, and egg whites. It’s a decadent and rich matcha cocktail.</p>
     </div>
 
-        <div class="menu-card" data-name="Jasmine" data-description="Playing off a classic nostalgic milk tea, this is a clarified cocktail that has the silky feeling of a milk tea with a nice jasmine green milk tea aroma. It uses jasmine milk tea, roku gin, lychee, and fresh lemon juice. " data-image="Pictures/menu/spring.sum/k.JPG">
-      <img src="Pictures/menu/spring.sum/k.JPG">
+        <div class="menu-card" data-name="Jasmine" data-description="Playing off a classic nostalgic milk tea, this is a clarified cocktail that has the silky feeling of a milk tea with a nice jasmine green milk tea aroma. It uses jasmine milk tea, roku gin, lychee, and fresh lemon juice. " data-image="Pictures/menu/ikebana/JASMINE.JPG">
+      <img src="Pictures/menu/ikebana/JASMINE.JPG">
       <h3>Jasmine</h3>
       <p>Playing off a classic nostalgic milk tea, this is a clarified cocktail that has the silky feeling of a milk tea with a nice jasmine green milk tea aroma. It uses jasmine milk tea, roku gin, lychee, and fresh lemon juice. </p>
     </div>
@@ -208,39 +208,101 @@
 
       <!-- IKEBANA NON ALC NIGHT MENU -->
   <div class="subsection-header">
-    <h2>Seasonal Spring/Summer Menu 2025</h2>
+    <h2>IKEBANA NON ALC NIGHT MENU 2025</h2>
     <hr />
   </div>
 
   <div class="menu-grid">
 
-    <div class="menu-card" data-name="Kisses" data-description="Strawberry Matcha" data-image="Pictures/menu/spring.sum/k.JPG">
-      <img src="Pictures/menu/spring.sum/k.JPG">
-      <h3>Kisses</h3>
-      <p>Strawberry Matcha</p>
+    <div class="menu-card" data-name="Cream" data-description="A 2.0 version of our sweet dreams. We have improved our overall balance make it more bubbly, creamy, and oolong. " data-image="Pictures/menu/ikebana/CREAM.JPG">
+      <img src="Pictures/menu/ikebana/CREAM.JPG">
+      <h3>Cream</h3>
+      <p>A 2.0 version of our sweet dreams. We have improved our overall balance make it more bubbly, creamy, and oolong. </p>
+    </div>
+
+        <div class="menu-card" data-name="Lychee" data-description="A zero lychee martini. A cute summery drink that is a mix of botanical, floral, and sweet flavors." data-image="Pictures/menu/ikebana/LYCHEE.jpg">
+      <img src="Pictures/menu/ikebana/LYCHEE.jpg">
+      <h3>Lychee</h3>
+      <p>A zero lychee martini. A cute summery drink that is a mix of botanical, floral, and sweet flavors.</p>
+    </div>
+
+        <div class="menu-card" data-name="Yuzu" data-description="Our first coffee and clarified drink. A mixture of peach and yuzu with a spray of orange oil creates this juicy take to a coffee based drink" data-image="Pictures/menu/ikebana/YUZU.JPG">
+      <img src="Pictures/menu/ikebana/YUZU.JPG">
+      <h3>Yuzu</h3>
+      <p>Our first coffee and clarified drink. A mixture of peach and yuzu with a spray of orange oil creates this juicy take to a coffee based drink.</p>
     </div>
 
   </div>
 
     <!-- ELOREA MENU -->
   <div class="subsection-header">
-    <h2>Seasonal Spring/Summer Menu 2025</h2>
+    <h2>ELOREA MENU</h2>
     <hr />
   </div>
 
   <!-- NEW: subsection description -->
     <p class="subsection-desc">
-    Bright, strawberry-forward drinks and refreshing matcha pairings crafted for warm weather.
+    ELOREA Non AKO Drinks
   </p>
 
   <div class="menu-grid">
 
-    <div class="menu-card" data-name="Kisses" data-description="Strawberry Matcha" data-image="Pictures/menu/spring.sum/k.JPG">
-      <img src="Pictures/menu/spring.sum/k.JPG">
-      <h3>Kisses</h3>
-      <p>Strawberry Matcha</p>
+    <div class="menu-card" data-name="Lychee Aloe N/A Martini" data-image="Pictures/menu/elorea/lanam.png">
+      <img src="Pictures/menu/elorea/lanam.png">
+      <h3>Lychee Aloe N/A Martini</h3>
     </div>
 
+    <div class="menu-card" data-name="N/A Margarita " data-image="Pictures/menu/elorea/nam.png">
+      <img src="Pictures/menu/elorea/nam.png">
+      <h3>N/A Margarita</h3>
+    </div>
+
+    <div class="menu-card" data-name="Coffee and N/A Bourbon with a Soy Sauce Foam " data-image="Pictures/menu/elorea/cnabwssf.png">
+      <img src="Pictures/menu/elorea/cnabwssf.png">
+      <h3>Coffee and N/A Bourbon with a Soy Sauce Foam</h3>
+    </div>
+
+    <div class="menu-card" data-name="Grapefruit and Blue Caraco Spritz" data-image="Pictures/menu/elorea/gfbcs.png">
+      <img src="Pictures/menu/elorea/gfbcs.png">
+      <h3>Grapefruit and Blue Caraco Spritz</h3>
+    </div>
+
+    <div class="menu-card" data-name="Yuja and Shisandra Berry Tonic" data-image="Pictures/menu/elorea/ysbt.png">
+      <img src="Pictures/menu/elorea/ysbt.png">
+      <h3>Yuja and Shisandra Berry Tonic</h3>
+    </div>
+
+    <div class="menu-card" data-name="Shaken Perilla Leaf Jeju Green Tea" data-image="Pictures/menu/elorea/lanam.png">
+      <img src="Pictures/menu/elorea/spljgt.png">
+      <h3>Shaken Perilla Leaf Jeju Green Tea</h3>
+    </div>
+
+    <div class="menu-card" data-name="Clarified Coffee with a rose and nutmeg cream" data-image="Pictures/menu/elorea/ccwrnc.png">
+      <img src="Pictures/menu/elorea/ccwrnc.png">
+      <h3>Clarified Coffee with a rose and nutmeg cream</h3>
+    </div>
+
+    <div class="menu-card" data-name="Matcha and Jasmine Infused Cream top" data-image="Pictures/menu/elorea/mjict.png">
+      <img src="Pictures/menu/elorea/mjict.png">
+      <h3>Matcha and Jasmine Infused Cream top</h3>
+    </div>
+
+    <div class="menu-card" data-name="Brown Sugar and Orange Spiced Chai " data-image="Pictures/menu/elorea/bsosc.png">
+      <img src="Pictures/menu/elorea/bsosc.png">
+      <h3>Brown Sugar and Orange Spiced Chai </h3>
+    </div>
+
+    <div class="menu-card" data-name="Shaken Jasmine Jeju Green Tea " data-image="Pictures/menu/elorea/sjjgt.png">
+      <img src="Pictures/menu/elorea/sjjgt.png">
+      <h3>Shaken Jasmine Jeju Green Tea </h3>
+    </div>
+
+    <div class="menu-card" data-name="Smoked Misugaru Mocha" data-image="Pictures/menu/elorea/smm.png">
+      <img src="Pictures/menu/elorea/smm.png">
+      <h3>Smoked Misugaru Mocha</h3>
+    </div>
+
+    
   </div>
 
   <!-- GOING NOWHERE MENU 2025 -->
