--- a/public/menu.html
+++ b/public/menu.html
@@ -236,13 +236,13 @@
 
     <!-- ELOREA MENU -->
   <div class="subsection-header">
-    <h2>ELOREA MENU</h2>
+    <h2>MISCELLANEOUS MENU</h2>
     <hr />
   </div>
 
   <!-- NEW: subsection description -->
     <p class="subsection-desc">
-    ELOREA Non AKO Drinks
+    2025 Miscellaneous Experimental Drinks
   </p>
 
   <div class="menu-grid">
